test/error/non-exist-file.scm
;; cannot open input file: /dev/null/not/exist
(call-with-input-file "/dev/null/not/exist" (lambda () #f))
